# log-mcp-server

./: AGENTS.md  README.md  pyproject.toml
.understand-anything/: knowledge-graph.json
src/log_mcp/: server.py
src/log_mcp/tools/: docker_logs.py  file_logs.py
tests/: test_docker_logs.py  test_file_logs.py
